<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Course_detailss_teacher">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/course_details_backbtn"
                    android:gravity="center"
                    android:drawableLeft="@drawable/icon_go_left"
                    android:text="back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="20dp"
                    android:layout_centerInParent="true"
                    android:text="@string/summy_course_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <TextView
                android:textSize="20dp"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:text="Data Structure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_margin="3dp"
                android:padding="10dp"
                android:background="@drawable/border_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/semester_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/course_details_semester"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/dummy_semester_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/course_details_semester"
                    android:id="@+id/course_details_sections"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/dummy_semester_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_alignTop="@id/course_details_sections"
                    android:layout_below="@id/course_details_semester"
                    android:layout_alignParentLeft="true"
                    android:text="@string/section_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <android.support.v4.view.ViewPager
                android:layout_marginTop="10dp"
                android:id="@+id/course_details_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>