<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SlidingPaneLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slidingpanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teacher.Teacher_dashboard">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:background="@drawable/border_bottom"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="3dp"
            android:layout_width="300dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.example.course_evaluation.customcomponent.CircleImageView
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sample_pp2"
                    android:layout_width="90dp"
                    android:layout_height="90dp" />
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:text="Saturday 20 June"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:padding="5dp"
                    android:gravity="right"
                    android:textColor="@color/link_color"
                    android:text="view full schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ListView
                    tools:listitem="@layout/card_schedule_row"
                    android:id="@+id/tdb_navigation_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="8dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme" />
        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.constraint.ConstraintLayout
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.example.course_evaluation.customcomponent.CircleImageView
                            android:id="@+id/tdb_profile_image"
                            android:clickable="true"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:src="@drawable/sample_pp2"
                            android:layout_width="100dp"
                            android:layout_height="100dp" />
                    </android.support.constraint.ConstraintLayout>
                    <RelativeLayout
                        android:id="@+id/tdb_layout1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:drawableLeft="@android:drawable/ic_menu_search"
                            android:id="@+id/td_search"
                            android:clickable="true"
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:background="@null"
                            android:focusable="false"
                            android:gravity="center"
                            android:focusableInTouchMode="false"
                            android:hint="@string/search_txt"/>

                    </RelativeLayout>
                    <LinearLayout
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tdb_showcoursebtn"
                            android:shadowColor="@color/Red"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:drawableTop="@android:drawable/ic_menu_view"
                            android:text="@string/show_courses_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:clickable="true"
                            android:id="@+id/tdb_createcoursebtn"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:drawableTop="@android:drawable/ic_input_add"
                            android:text="@string/create_course_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tdb_manage_schedule"
                            android:gravity="center"
                            android:layout_weight=".90"
                            android:layout_margin="10dp"
                            android:drawableTop="@android:drawable/ic_menu_manage"
                            android:text="@string/manage_schedule_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:drawableTop="@android:drawable/ic_menu_view"
                            android:text="@string/show_courses_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:clickable="true"
                            android:id="@+id/tdb_setting"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:drawableTop="@android:drawable/arrow_down_float"
                            android:gravity="center"
                            android:text="@string/action_settings" />
                        <TextView
                            android:id="@+id/btnLogout"
                            android:clickable="true"
                            android:gravity="center"
                            android:layout_weight=".90"
                            android:layout_margin="10dp"
                            android:drawableTop="@android:drawable/ic_menu_upload"
                            android:text="@string/logout_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tdb_profile"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:drawableTop="@android:drawable/ic_menu_view"
                            android:text="@string/profile_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tdb_schedule"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:drawableTop="@android:drawable/ic_menu_view"
                            android:gravity="center"
                            android:clickable="true"
                            android:text="@string/schedule_txt" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.SlidingPaneLayout>