<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.AppCompat.NoActionBar"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <com.example.course_evaluation.customcomponent.CircleImageView
            android:id="@+id/course_req_course_image"
            android:src="@drawable/sample_pp2"
            android:layout_width="70dp"
            android:layout_height="70dp" />
        <TextView
            android:textColor="@color/green"
            android:id="@+id/course_req_course_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="on" />
        <TextView
            android:layout_toRightOf="@id/course_req_course_image"
            android:id="@+id/course_req_course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/course_req_course_status"
            android:gravity="center"
            android:padding="5dp"
            android:text="CSE-3311"
            android:textSize="23sp" />
        <TextView
            android:focusedByDefault="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:id="@+id/course_req_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/course_req_course_image"
            android:layout_below="@id/course_req_course_code"
            android:gravity="center"
            android:text="Microprocessor and computer architechture design"
            android:textSize="18sp"
            android:singleLine="true" />
        <LinearLayout
            android:id="@+id/course_reqdum3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_req_course_name"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/course_reqdum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:text="BY :" />

            <TextView
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:ellipsize="marquee"
                android:focusedByDefault="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/course_req_course_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/course_reqdum3"
                android:layout_alignEnd="@+id/course_reqdum3"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:paddingLeft="7dp"
                android:text="Md Kamrummzzaman Chowdhury"
                android:textSize="18sp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_marginLeft="10dp"
            android:id="@+id/course_reqdum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_reqdum3">
            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/d1"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Batch : " />
            <TextView
                android:layout_toRightOf="@id/d1"
                android:id="@+id/course_req_course_batch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="44th" />
            <TextView
                android:layout_toLeftOf="@id/course_req_course_sections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Section : " />
            <TextView
                android:layout_alignParentEnd="true"
                android:gravity="right"
                android:id="@+id/course_req_course_sections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A,B,C,D" />
        </RelativeLayout>
        <TextView
            android:id="@+id/course_req_course_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_reqdum2"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:text="@string/dummy_date" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/course_req_course_create_time"
            android:layout_toLeftOf="@id/course_req_course_create_time"
            android:text="created on: " />
    </RelativeLayout>
    <CheckBox
        android:gravity="top"
        android:layout_margin="7dp"
        android:textColor="@color/orange"
        android:text="@string/request_access_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/course_req_cancelreqbtn"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/button_background_red"
        android:layout_gravity="center"
        android:text="@string/cancel_request_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/course_req_cancelbtn"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/button_background_red"
            android:layout_gravity="center"
            android:text="@string/cancel_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/course_req_sendreqbtn"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/button_background_green"
            android:layout_gravity="center"
            android:text="@string/request_access_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>